        the parser, and allows several kludges in the previous
        scheme to be eliminated.
  \item Much of the deparser has been rewritten.  It no longer
        looks at the definitions of operators, which are irrelevant,
        since the parser does not look at them.
  \item C
  \item D
}}

  \subsection{NEW FEATURES FROM LATER R CORE VERSIONS}{
  \itemize{
  \item A
  \item B
  \item C
  \item D
}}

  \subsection{PERFORMANCE IMPROVEMENTS}{
  \itemize{
  \item A
  \item B
  \item C
  \item D
}}

  \subsection{BUG FIXES MATCHING THOSE IN LATER R CORE VERSIONS}{
  \itemize{
  \item From R-2.15.1: Names containing characters which need to be escaped 
        were not deparsed properly (PR#14846).  Fixed in pqR partly based
        on R Core fix.
  \item From R-2.15.2: When given a 0-byte file and asked to keep source
        references, parse() read input from stdin() instead.
  \item From R-2.15.3: Expressions involving user defined operators were not 
        always deparsed faithfully (PR#15179).  Fixed in pqR as part of
        the rewrite of the parser and deparser.
  \item From R-3.1.3: The parser now gives an error if a null character 
        is included in a string using Unicode escapes. (PR#16046)
  \item From R-3.2.2: Rscript and command line R silently ignored incomplete
        statements at the end of a script; now they are reported as parse errors
        (PR#16350).  Fixed in pqR as part of the rewrite of the parser
        and deparser.
  \item B
  \item C
  \item D
}}

  \subsection{BUG FIXES}{
  \itemize{
  \item The new parser fixes bugs arising from the old parser's kludge
        to handle semicolons, illustrated by the incorrect output seen below:
\preformatted{  > p<-parse()
  ?"abc;xyz"
  Error in parse() : <stdin>:1:1: unexpected INCOMPLETE_STRING
  1: "abc;
      ^
  > p<-parse()
  ?8 #abc;xyz
  Error in parse() : <stdin>:1:7: unexpected end of input
  1: 8 #abc;
          ^
}