@@ -1,6 +1,7 @@
 #  File src/library/base/R/parse.R
 #  Part of the R package, http://www.R-project.org
-#  Modifications for pqR Copyright (c) 2015 Radford M. Neal.
+#
+#  Copyright (C) 1995-2012 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,29 +17,40 @@
 #  http://www.r-project.org/Licenses/
 
 parse <- function(file = "", n = NULL, text = NULL, prompt = "?",
+		  keep.source = getOption("keep.source"),
                   srcfile = NULL, encoding = "unknown")
 {
-    keep.source <- isTRUE(getOption("keep.source"))
+    keep.source <- isTRUE(keep.source)
     if(!is.null(text)) {
-    	if (length(text) == 0L)
-	    return(expression())
-	if (missing(srcfile) && keep.source)
-	    srcfile <- srcfilecopy("<text>", text)
-    }
-    if(is.character(file))
-        if(file == "") file <- stdin()
-        else {
-            filename <- file
-            file <- file(filename, "r")
-            if (missing(srcfile) && keep.source) {
-            	text <- readLines(file)
-                if (length(text) == 0) text = ""
-            	close(file)
+    	if (length(text) == 0L) return(expression())
+	if (missing(srcfile)) {
+	    srcfile <- "<text>"
+	    if (keep.source)
+	       srcfile <- srcfilecopy(srcfile, text)
+	}
+	file <- stdin()
+    } else {
+	if(is.character(file)) {
+            if(file == "") {
             	file <- stdin()
-        	srcfile <- srcfilecopy(filename, text, file.info(filename)[1,"mtime"],
+            	if (missing(srcfile))
+            	    srcfile <- "<stdin>"
+            } else {
+		filename <- file
+		file <- file(filename, "r")
+            	if (missing(srcfile))
+            	    srcfile <- filename
+            	if (keep.source) {
+		    text <- readLines(file, warn = FALSE)
+		    if (!length(text)) text <- ""
+            	    close(file)
+            	    file <- stdin()
+        	    srcfile <- srcfilecopy(filename, text, file.info(filename)[1,"mtime"],
         	                       isFile = TRUE)
-            } else 	
-                on.exit(close(file))
-        }
+                } else
+		    on.exit(close(file))
+	    }
+	}
+    }
     .Internal(parse(file, n, text, prompt, srcfile, encoding))
 }
