@@ -1,6 +1,6 @@
 % File src/library/base/man/parse.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2011 R Core Development Team
+% Copyright 1995-2011 R Core Team
 % Modifications for pqR Copyright (c) 2015 Radford M. Neal.
 % Distributed under GPL 2 or later
 
@@ -12,7 +12,8 @@
   list.
 }
 \usage{
-parse(file = "", n = NULL, text = NULL, prompt = "?", srcfile,
+parse(file = "", n = NULL, text = NULL, prompt = "?",
+      keep.source = getOption("keep.source"), srcfile,
       encoding = "unknown")
 }
 \arguments{
@@ -28,8 +29,10 @@ parse(file = "", n = NULL, text = NULL, prompt = "?", srcfile,
     to character if possible.}
   \item{prompt}{the prompt to print when parsing from the keyboard.
     \code{NULL} means to use \R's prompt, \code{getOption("prompt")}.}
-  \item{srcfile}{\code{NULL}, or a \code{\link{srcfile}} object.  See
-    the \sQuote{Details} section.}
+  \item{keep.source}{a logical value; if \code{TRUE}, keep 
+    source reference information.}
+  \item{srcfile}{\code{NULL}, a character vector, or a
+    \code{\link{srcfile}} object.  See the \sQuote{Details} section.}
   \item{encoding}{encoding to be assumed for input strings.  If the
     value is \code{"latin1"} or \code{"UTF-8"} it is used to mark
     character strings as known to be in Latin-1 or UTF-8: it is not used
@@ -42,15 +45,25 @@ parse(file = "", n = NULL, text = NULL, prompt = "?", srcfile,
   Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988)
   \emph{The New S Language}.
   Wadsworth & Brooks/Cole.
+  
+  Murdoch, D. (2010).  
+  \href{http://journal.r-project.org/archive/2010-2/RJournal_2010-2_Murdoch.pdf}{Source 
+  References}.  \emph{The R Journal} 2/2, 16-19.
 }
 \seealso{
   \code{\link{scan}}, \code{\link{source}}, \code{\link{srcfile}}, 
   \code{\link{eval}}, \code{\link{deparse}}.
+
+  The source reference information can be used for debugging (see e.g.
+  \code{\link{setBreakpoint}}) and profiling (see
+  \code{\link{Rprof}}). It can be examined by \code{\link{getSrcref}}
+  and related functions.  More detailed information is available through
+  \code{\link{getParseData}}.  
 }
 \details{
   If \code{text} has length greater than zero (after coercion) it is used in
   preference to \code{file}.
-  
+
   All versions of \R accept input from a connection with end of line
   marked by LF (as used on Unix), CRLF (as used on DOS/Windows)
   or CR (as used on classic Mac OS).  The final line can be incomplete,
@@ -66,11 +79,18 @@ parse(file = "", n = NULL, text = NULL, prompt = "?", srcfile,
   may impose a lower limit: see \sQuote{An Introduction to R}).
 
   The default for \code{srcfile} is set as follows.  If
-  \code{options("keep.source")} is \code{FALSE}, \code{srcfile}
-  defaults to \code{NULL}. Otherwise, if \code{text} is used,
-  \code{srcfile} will be set to a \code{\link{srcfilecopy}} containing
-  the text.  If a character string is used for \code{file}, a
-  \code{\link{srcfile}} object referring to that file will be used.
+  \code{keep.source} is not \code{TRUE}, \code{srcfile}
+  defaults to a character string, either \code{"<text>"} or one
+  derived from \code{file}.  When \code{keep.source} is
+  \code{TRUE}, if \code{text} is used, \code{srcfile} will be set to a
+  \code{\link{srcfilecopy}} containing the text.  If a character
+  string is used for \code{file}, a \code{\link{srcfile}} object
+  referring to that file will be used.
+
+  When \code{srcfile} is a character string, error messages will
+  include the name, but source reference information will not be added
+  to the result.  When \code{srcfile} is a \code{\link{srcfile}}
+  object, source reference information will be retained. 
 }
 \value{
   An object of type \code{"\link{expression}"}, with up to \code{n}
@@ -89,8 +109,10 @@ parse(file = "", n = NULL, text = NULL, prompt = "?", srcfile,
   \code{"srcfile"} attribute will be attached containing a copy of
   \code{srcfile}, and a \code{"wholeSrcref"} attribute will be
   attached containing a \code{\link{srcref}} record corresponding to
-  all of the parsed text.
-  
+  all of the parsed text. Detailed parse information will be stored in
+  the \code{"srcfile"} attribute, to be retrieved by
+  \code{\link{getParseData}}.
+
   A syntax error (including an incomplete expression) will throw an error.
 
   Character strings in the result will have a declared encoding if
@@ -98,8 +120,9 @@ parse(file = "", n = NULL, text = NULL, prompt = "?", srcfile,
   \code{text} is supplied with every element of known encoding in a
   Latin-1 or UTF-8 locale.
 }
+
 \examples{
-cat("x <- c(1,4)\n  x ^ 3 -10 ; outer(1:7,5:9)\n", file="xyz.Rdmped")
+cat("x <- c(1, 4)\n  x ^ 3 -10 ; outer(1:7, 5:9)\n", file = "xyz.Rdmped")
 # parse 3 statements from the file "xyz.Rdmped"
 parse(file = "xyz.Rdmped", n = 3)
 unlink("xyz.Rdmped")
