@@ -4,7 +4,7 @@
  *
  *  Based on R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 2001-11      The R Development Core Team
+ *  Copyright (C) 2001-12     The R Core Team
  *
  *  The changes in pqR from R-2.15.0 distributed by the R Core Team are
  *  documented in the NEWS and MODS files in the top-level source directory.
@@ -31,6 +31,7 @@
 #define USE_FAST_PROTECT_MACROS
 #define R_USE_SIGNALS 1
 #include <Defn.h>
+#include <Internal.h>
 #include <Fileio.h>
 #include <IOStuff.h>
 #include <Parse.h>
@@ -94,14 +95,20 @@ SEXP attribute_hidden getParseContext(void)
 static void getParseFilename(char* buffer, size_t buflen)
 {
     buffer[0] = '\0';
-    if (R_ParseErrorFile && !isNull(R_ParseErrorFile)) {
-	SEXP filename;
-	PROTECT(filename = findVar(install("filename"), R_ParseErrorFile));
-	if (isString(filename) && length(filename)) {
-	    strncpy(buffer, CHAR(STRING_ELT(filename, 0)), buflen - 1);
-            buffer[buflen-1] = 0;
-        }
-	UNPROTECT(1);
+
+    if (R_ParseErrorFile && R_ParseErrorFile != R_NilValue) {
+
+        if (isEnvironment(R_ParseErrorFile)) {
+            SEXP filename;
+            PROTECT(filename = findVar(install("filename"), R_ParseErrorFile));
+            if (isString(filename) && length(filename))
+                strncpy(buffer, CHAR(STRING_ELT(filename, 0)), buflen - 1);
+            UNPROTECT(1);
+        } 
+        else if (isString(R_ParseErrorFile) && length(R_ParseErrorFile)) 
+            strncpy(buffer, CHAR(STRING_ELT(R_ParseErrorFile, 0)), buflen - 1);
+
+        buffer[buflen-1] = 0;
     }
 }
 
@@ -129,7 +136,7 @@ static SEXP tabExpand(SEXP strings)
     return result;
 }
     	
-void attribute_hidden parseError(SEXP call, int linenum)
+void parseError(SEXP call, int linenum)
 {
     SEXP context;
     int len, width;
@@ -142,19 +149,19 @@ void attribute_hidden parseError(SEXP call, int linenum)
 
 	switch (len) {
 	case 0:
-	    error(_("%s%d:%d: %s"),
+	    error("%s%d:%d: %s",
 		  filename, linenum, R_ParseErrorCol, R_ParseErrorMsg);
 	    break;
 	case 1: // replaces use of %n
 	    width = sprintf(buffer, "%d: ", R_ParseContextLine); 
-	    error(_("%s%d:%d: %s\n%d: %s\n%*s"),
+	    error("%s%d:%d: %s\n%d: %s\n%*s",
 		  filename, linenum, R_ParseErrorCol, R_ParseErrorMsg,
 		  R_ParseContextLine, CHAR(STRING_ELT(context, 0)), 
 		  width+R_ParseErrorCol, "^");
 	    break;
 	default:
 	    width = sprintf(buffer, "%d:", R_ParseContextLine);
-	    error(_("%s%d:%d: %s\n%d: %s\n%d: %s\n%*s"),
+	    error("%s%d:%d: %s\n%d: %s\n%d: %s\n%*s",
 		  filename, linenum, R_ParseErrorCol, R_ParseErrorMsg,
 		  R_ParseContextLine-1, CHAR(STRING_ELT(context, len-2)),
 		  R_ParseContextLine, CHAR(STRING_ELT(context, len-1)), 
@@ -164,14 +171,14 @@ void attribute_hidden parseError(SEXP call, int linenum)
     } else {
 	switch (len) {
 	case 0:
-	    error(_("%s"), R_ParseErrorMsg);
+	    error("%s", R_ParseErrorMsg);
 	    break;
 	case 1:
-	    error(_("%s in \"%s\""),
+	    error("%s in \"%s\"",
 		  R_ParseErrorMsg, CHAR(STRING_ELT(context, 0)));
 	    break;
 	default:
-	    error(_("%s in:\n\"%s\n%s\""),
+	    error("%s in:\n\"%s\n%s\"",
 		  R_ParseErrorMsg, CHAR(STRING_ELT(context, len-2)),
 		  CHAR(STRING_ELT(context, len-1)));
 	    break;
@@ -208,6 +215,8 @@ static int console_getc (void *prompt_string)
 
     return *console_bufp++;
 }
+
+/* .Internal( parse(file, n, text, prompt, srcfile, encoding) ) */
 
 static SEXP do_parse(SEXP call, SEXP op, SEXP args, SEXP env)
 {
