@@ -60,7 +60,8 @@
 
   \subsection{NEW FEATURES FROM LATER R CORE VERSIONS}{
   \itemize{
-  \item A
+  \item From R-3.0.0: The \code{srcfile} argument to \code{parse()} may now 
+        be a character string, to be used in error messages.
   \item B
   \item C
   \item D
